--- a/index.html
+++ b/index.html
@@ -7,14 +7,8 @@
         <link rel="stylesheet" href="style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
-        />
-        <link
-            rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Nunito Sans&display=swap"
-        />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito Sans&display=swap">
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.14.0/cdn/themes/light.css"
@@ -39,7 +33,7 @@
                 id="themeIcon"
                 class="material-symbols-outlined header-items"
                 onclick="toggleTheme()"
-                style="cursor: pointer"
+                style="cursor: pointer;"
                 >light_mode</span
             >
         </div>
@@ -59,15 +53,12 @@
                 </div>
             </div>
             <div>
-                <span class="countdown" id="countdown"></span>
-                <sl-progress-bar
-                    id="progressBar"
-                    max="100"
-                    style="--height: 10px; padding: 10px"
-                ></sl-progress-bar>
+            <span class="countdown" id="countdown"></span>
+              <sl-progress-bar id="progressBar" max="100" style="--height: 10px; padding: 10px;"></sl-progress-bar>
             </div>
         </div>
         <div class="container" id="timingsContainer"></div>
+      <div class="footer">Made with ❤️ by <a href="https://github.com/abdipr">Abdi</a></div>
         <script src="script.js"></script>
     </body>
 </html>
