--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div>
             <span class="countdown" id="countdown"></span>
-              <sl-progress-bar id="progressBar" max="100" style="--height: 10px; padding: 10px;"></sl-progress-bar>
+              <sl-progress-bar id="progressBar" max="100" class="progress"></sl-progress-bar>
             </div>
         </div>
         <div class="container" id="timingsContainer"></div>
