--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     ><span id="current-time"></span>
                 </div>
             </div>
-            <div>
+            <div class="infotext">
             <span class="countdown" id="countdown"></span>
               <sl-progress-bar id="progressBar" max="100" class="progress"></sl-progress-bar>
             </div>
